typing jump error corrected

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -38,7 +38,7 @@
     height: 15px;
     display: inline-block;
     @include desktop2{
-    line-height: 50px;
+    line-height: 37px;
       height: 30px;
     }
   }
